(smola-changes) made basics functional so this branch can be pulled by anyone