@@ -1,39 +1,33 @@
-echo "preparing to refresh your bash profile"
+echo "Preparing to refresh your bash profile..."
 
 touch "${gitscripts_path}bash_profile_config.overrides"
 touch "${gitscripts_path}environment_config.overrides"
 
 source "${gitscripts_path}environment_config.overrides"
 source "${gitscripts_path}environment_config.default"
-#source "${gitscripts_path}environment_config.overrides"
 
 
-cat "${gitscripts_path}environment_config.overrides" "${gitscripts_path}line_break" "${gitscripts_path}environment_config.default" "${gitscripts_path}line_break" "${gitscripts_path}environment_config.overrides" "${gitscripts_path}line_break" "${gitscripts_path}bash_profile_config.overrides" "${gitscripts_path}line_break" "${gitscripts_path}bash_profile_config" > "${gitscripts_temp_bash_profile_path}"
+echo "	> concatenating scripts..."
+cat "${gitscripts_path}environment_config.overrides" "${gitscripts_path}line_break" "${gitscripts_path}environment_config.default" "${gitscripts_path}line_break" "${gitscripts_path}bash_profile_config.overrides" "${gitscripts_path}line_break" "${gitscripts_path}bash_profile_config" > "${gitscripts_temp_bash_profile_path}"
 
 
-#touch "${native_gitscripts_bash_profile_path}"
-#touch "${native_gitscripts_bash_motd_path}"
-
+echo "	> sending scripts to bash_profile..."
 cp "${gitscripts_temp_bash_profile_path}" "${native_bash_profile_path}"
-#cp "${gitscripts_path}motd" "${native_gitscripts_bash_motd_path}"
+cp "${gitscripts_motd_path}" "${native_motd_path}"
 
 rm "${gitscripts_temp_bash_profile_path}"
 
-echo "Going to source: ${native_bash_profile_path}"
 
+echo "	> sourcing: set-bash-colors.sh && bashmarks.sh"
 source ${gitscripts_path}set-bash-colors.sh
 source ${gitscripts_path}bashmarks.sh
 
 
+echo "	> sourcing: ${native_bash_profile_path}"
 source "${native_bash_profile_path}"
 
 
-#source "${native_gitscripts_bash_profile_path}"
-
 ## ADDED BY SMOLA ##
-
-	#prevent Heap error
-export ANT_OPTS="-Xms64m -Xmx512m -Duser.language=en -XX:PermSize=128M -XX:MaxPermSize=256M "
 
 	#prevent saving of *.orig files during git diff
 git config --global mergetool.keepBackup false
@@ -57,4 +51,3 @@ echo ""
 echo "Refreshed your bash profile."
 echo ""
 echo ""
-
